unpackaged/objects/MemberInfo__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>住所</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(OR( MONTH( TODAY() )  &gt; MONTH( DateOfBirth__c ),AND(MONTH( TODAY() ) - MONTH( DateOfBirth__c )=0, DAY( TODAY() )  &gt;= DAY( DateOfBirth__c ))), 
YEAR(TODAY()) - YEAR( DateOfBirth__c ), 
YEAR(TODAY()) - YEAR( DateOfBirth__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年齢</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnshinHospitalizationWaitingPeriod__c</fullName>
        <formula>IF (OR(ISPICKVAL(InsuranceKind__c, &quot;安心生活&quot;),ISPICKVAL(InsuranceKind__c, &quot;安心NHST&quot;),ISPICKVAL(InsuranceKind__c, &quot;Happy Life&quot;)) = True, text(DATE( year(OtaInsuranceShiki__c) ,month(OtaInsuranceShiki__c),day(OtaInsuranceShiki__c)) + 29), &quot;なし&quot;)</formula>
        <label>入院待機期間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnshinOutpatientWaitingPeriod__c</fullName>
        <formula>IF (OR(ISPICKVAL(InsuranceKind__c, &quot;安心生活&quot;),ISPICKVAL(InsuranceKind__c, &quot;安心NHST&quot;),ISPICKVAL(InsuranceKind__c, &quot;Happy Life&quot;)) = True, text(DATE( year(OtaInsuranceShiki__c) ,month(OtaInsuranceShiki__c),day(OtaInsuranceShiki__c)) + 14), &quot;なし&quot;)</formula>
        <label>外来待機期間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App_Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_ID_DOB__c</fullName>
        <formula>IF ( ISNULL(DateOfBirth__c),
	MemberNo__c,
	MemberNo__c&amp;&quot;　DOB:&quot;&amp;DateOfBirth_CdFmt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（カード）会員番号・生年月日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarryCost__c</fullName>
        <label>携行品損害</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CommodityCd__c</fullName>
        <formula>CASE( Commodity__c , 
&quot;メディック&quot;,&quot;1&quot;,
&quot;留学生&quot;,&quot;2&quot;,
&quot;チャイナボウル&quot;,&quot;3&quot;,
&quot;ベトナムメディック&quot;,&quot;5&quot;,
&quot;Medi-X&quot;,&quot;7&quot;,
&quot;Prime Care&quot;,&quot;8&quot;,
&quot;メディフル&quot;,&quot;9&quot;,
&quot;0&quot;)</formula>
        <label>商品コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommodityText__c</fullName>
        <formula>CASE( Commodity__c , &quot;メディック&quot;, &quot;メディック&quot;, 
&quot;留学生&quot;, &quot;留学生&quot;,
&quot;チャイナボウル&quot;,&quot;チャイナボウル&quot;,
&quot;メディフル&quot;,&quot;メディフル&quot;,
&quot;メディック&quot;)</formula>
        <label>商品（テキスト）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>商品</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>メディック</fullName>
                </value>
                <value>
                    <fullName>チャイナボウル</fullName>
                </value>
                <value>
                    <fullName>Prime Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyKeiyakuNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約番号</label>
        <referenceTo>ContractInfo__c</referenceTo>
        <relationshipLabel>会員情報</relationshipLabel>
        <relationshipName>R00N10000000HXmYEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ComplaintKubun__c</fullName>
        <label>苦情区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>なし</fullName>
                </value>
                <value>
                    <fullName>少ない</fullName>
                </value>
                <value>
                    <fullName>やや多い</fullName>
                </value>
                <value>
                    <fullName>多い</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactAddress_1__c</fullName>
        <label>①住所</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactAddress_2__c</fullName>
        <label>②住所</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactAddress_3__c</fullName>
        <label>③住所</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactBusho_1__c</fullName>
        <label>①部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactBusho_2__c</fullName>
        <label>②部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactBusho_3__c</fullName>
        <label>③部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCompanyName_1__c</fullName>
        <label>①会社</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCompanyName_2__c</fullName>
        <label>②会社</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCompanyName_3__c</fullName>
        <label>③会社</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCountryCode_1__c</fullName>
        <inlineHelpText>電話番号の国番号を入力します。
日本＝81 
中国＝86 
香港＝852 
ベトナム＝84</inlineHelpText>
        <label>①国番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCountryCode_2__c</fullName>
        <inlineHelpText>電話番号の国番号を入力します。
日本＝81 
中国＝86 
香港＝852 
ベトナム＝84</inlineHelpText>
        <label>②国番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCountryCode_3__c</fullName>
        <inlineHelpText>電話番号の国番号を入力します。
日本＝81 
中国＝86 
香港＝852 
ベトナム＝84</inlineHelpText>
        <label>③国番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail_1__c</fullName>
        <label>①Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactEmail_2__c</fullName>
        <label>②Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactEmail_3__c</fullName>
        <label>③Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactExtNo_1__c</fullName>
        <label>①内線</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactExtNo_2__c</fullName>
        <label>②内線</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactExtNo_3__c</fullName>
        <label>③内線</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFax_1__c</fullName>
        <label>①FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactFax_2__c</fullName>
        <label>②FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactFax_3__c</fullName>
        <label>③FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactHolidayTel_1__c</fullName>
        <inlineHelpText>入力する際は、
－（ハイフン）を抜いて入力して下さい。
例）　○0335380180
　　　×03-3538-0180</inlineHelpText>
        <label>①TEL（休日用）</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactHolidayTel_2__c</fullName>
        <inlineHelpText>入力する際は、
－（ハイフン）を抜いて入力して下さい。
例）　○0335380180
　　　×03-3538-0180</inlineHelpText>
        <label>②TEL（休日用）</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactHolidayTel_3__c</fullName>
        <label>③TEL（休日用）</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactMobile_1__c</fullName>
        <inlineHelpText>入力する際は、
－（ハイフン）を抜いて入力して下さい。
例）　○0335380180
　　　×03-3538-0180</inlineHelpText>
        <label>①携帯TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactMobile_2__c</fullName>
        <inlineHelpText>入力する際は、
－（ハイフン）を抜いて入力して下さい。
例）　○0335380180
　　　×03-3538-0180</inlineHelpText>
        <label>②携帯TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactMobile_3__c</fullName>
        <label>③携帯TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactPostcd_1__c</fullName>
        <label>①郵便番号</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPostcd_2__c</fullName>
        <label>②郵便番号</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPostcd_3__c</fullName>
        <label>③郵便番号</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactRelationship_1__c</fullName>
        <label>①続柄</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>父</fullName>
                </value>
                <value>
                    <fullName>母</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>兄弟</fullName>
                </value>
                <value>
                    <fullName>姉妹</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
                <value>
                    <fullName>会社担当者</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactRelationship_2__c</fullName>
        <label>②続柄</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>父</fullName>
                </value>
                <value>
                    <fullName>母</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>兄弟</fullName>
                </value>
                <value>
                    <fullName>姉妹</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
                <value>
                    <fullName>会社担当者</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactRelationship_3__c</fullName>
        <label>③続柄</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>父</fullName>
                </value>
                <value>
                    <fullName>母</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>兄弟</fullName>
                </value>
                <value>
                    <fullName>姉妹</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
                <value>
                    <fullName>会社担当者</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactShimei_1__c</fullName>
        <label>①氏名</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactShimei_2__c</fullName>
        <label>②氏名</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactShimei_3__c</fullName>
        <label>③氏名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTel_1__c</fullName>
        <inlineHelpText>入力する際は、
－（ハイフン）を抜いて入力して下さい。
例）　○0335380180
　　　×03-3538-0180</inlineHelpText>
        <label>①TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactTel_2__c</fullName>
        <inlineHelpText>入力する際は、
－（ハイフン）を抜いて入力して下さい。
例）　○0335380180
　　　×03-3538-0180</inlineHelpText>
        <label>②TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactTel_3__c</fullName>
        <label>③TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CountryCallingCodes__c</fullName>
        <inlineHelpText>電話番号の国番号を入力します。
日本＝81 
中国＝86 
香港＝852 
ベトナム＝84
インド＝91</inlineHelpText>
        <label>国際電話国番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCodes__c</fullName>
        <formula>CASE( CountryName__c , 
&quot;中国&quot;, &quot;CHN&quot;, 
&quot;香港&quot;, &quot;HKG&quot;, 
&quot;日本&quot;, &quot;JPN&quot;, 
&quot;ベトナム&quot;, &quot;VTN&quot;, 
&quot;インド&quot;, &quot;IND&quot;, 
&quot;インドネシア&quot;, &quot;IDN&quot;, 
&quot;フィリピン&quot;, &quot;PHL&quot;, 
&quot;カンボジア&quot;, &quot;KHM&quot;, 
&quot;タイ&quot;,&quot;THA&quot;, 
&quot;シンガポール&quot;,&quot;SGP&quot;, 
&quot;ミャンマー&quot;,&quot;MMR&quot;, 
&quot;スリランカ&quot;,&quot;LKA&quot;, 
&quot;韓国&quot;,&quot;KOR&quot;, 
&quot;台湾&quot;,&quot;TWN&quot;, 
&quot;マレーシア&quot;,&quot;MYS&quot;, 
&quot;ラオス&quot;,&quot;LAO&quot;,
&quot;バングラデシュ&quot;,&quot;BGD&quot;,
&quot;北米&quot;,&quot;GNA&quot;,
&quot;メキシコ&quot;,&quot;MEX&quot;,
&quot;中南米&quot;, &quot;GLA&quot;,
&quot;欧州&quot;,&quot;GEU&quot;,
&quot;オセアニア&quot;,&quot;GOC&quot;,
&quot;CIS&quot;,&quot;GCI&quot;, 
&quot;中東&quot;,&quot;GME&quot;,
&quot;アフリカ&quot;,&quot;GAF&quot;, 
&quot;&quot;)</formula>
        <label>国コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>国名</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region_and_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>韓国</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>ラオス</fullName>
                </value>
                <value>
                    <fullName>バングラデシュ</fullName>
                </value>
                <value>
                    <fullName>北米</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>中南米</fullName>
                </value>
                <value>
                    <fullName>欧州</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>中東</fullName>
                </value>
                <value>
                    <fullName>アフリカ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryOfDeparture_Object__c</fullName>
        <inlineHelpText>無記名の場合に、国名または「現地受入用」を入力します。

現地契約の無記名は、「現地受入用」を選択します。
日本契約とBiz Trip Planの無記名は、国名を選択します。</inlineHelpText>
        <label>出発国/対象者</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KeiyakuKeitai__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>現地受入用</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_or_Region__c</fullName>
        <label>対象国</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DamagesCost__c</fullName>
        <label>賠償金額</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateOfBirth_CdFmt__c</fullName>
        <formula>IF ( CountryCodes__c=&apos;GNA&apos; , 
IF (	ISNULL(DateOfBirth__c),
		&apos;MM/DD/YYYY&apos;,
		RIGHT(TEXT(MONTH(DateOfBirth__c)+ 100), 2) +&quot;/&quot; +RIGHT(TEXT(DAY(DateOfBirth__c)+ 100), 2)+&quot;/&quot; +TEXT(YEAR(DateOfBirth__c))), 
IF (	ISNULL(DateOfBirth__c),
	   &apos;YYYY/MM/DD&apos;,
		TEXT(YEAR(DateOfBirth__c)) +&quot;/&quot; +RIGHT(TEXT(MONTH(DateOfBirth__c)+ 100), 2) +&quot;/&quot; +RIGHT(TEXT(DAY(DateOfBirth__c)+ 100), 2))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（カード）生年月日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <label>生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DentalTherapy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>（ベトナム）歯科治療</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiseaseCost__c</fullName>
        <label>疾病治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiseaseDeathCost__c</fullName>
        <label>疾病死亡</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>従業員番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>CompanyKeiyakuNo__r.KeiyakuCompanyName__r.Name</formula>
        <label>(契約情報)契約会社名●</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>KeiyakuCompanyName__r.CompanyCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(契約会社)会社コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <formula>CompanyKeiyakuNo__r.EigyoTanto__r.Name</formula>
        <label>(契約情報)営業担当</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formar_Healthcheck_Country__c</fullName>
        <label>前回)健診受診-国</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formar_Healthcheck_Date__c</fullName>
        <label>前回)健診受診-時期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formar_Healthcheck_Facility__c</fullName>
        <label>前回)健診受診-医療機関名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_Result_NOT_WB__c</fullName>
        <formula>TEXT(Healthcheck_NOT_WB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WB健診以外の健診結果保持</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Healthcheck_NOT_WB__c</fullName>
        <description>勤務先会社情報の「個人情報開示承認」が「ON」の場合にのみ「あり」にできる</description>
        <label>WB健診以外の健診結果</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>あり</fullName>
                </value>
                <value>
                    <fullName>なし</fullName>
                    <default>true</default>
                    <label>なし</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomeCountryCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>一時帰国中担保</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDN_Attibute__c</fullName>
        <label>（インドネシア）属性</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>従業員（61歳未満）</fullName>
                </value>
                <value>
                    <fullName>従業員（61歳～65歳）</fullName>
                </value>
                <value>
                    <fullName>配偶者（61歳未満）</fullName>
                </value>
                <value>
                    <fullName>配偶者（61歳～65歳）</fullName>
                </value>
                <value>
                    <fullName>子供（4歳未満）</fullName>
                </value>
                <value>
                    <fullName>子供（4歳～23歳）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_KITAS_NO__c</fullName>
        <description>KITAS：一時居住許可証</description>
        <label>（インドネシア）KITAS：一時居住許可証</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVPrintPositionCd__c</fullName>
        <formula>CASE( KeiyakuKeitai__c , 
&quot;法人／単身Global Plus Member&quot;,&quot;5&quot;, 
&quot;法人／家族Global Plus Member&quot;,&quot;5&quot;, 
&quot;個人／単身Global Plus Member&quot;,&quot;5&quot;, 
&quot;個人／家族Global Plus Member&quot;,&quot;5&quot;, 
&quot;法人／単身Global Member&quot;,&quot;8&quot;, 
&quot;法人／家族Global Member&quot;,&quot;8&quot;, 
&quot;法人／無記名Biz Trip Pass&quot;,&quot;6&quot;, 
&quot;法人／無記名Visitor Pass&quot;,&quot;7&quot;, 
&quot;法人／単身Asian&quot;, &quot;2&quot;, 
&quot;法人／家族Asian&quot;, &quot;2&quot;, 
&quot;法人／無記名Asian&quot;, &quot;2&quot;, 
&quot;個人／単身Asian&quot;, &quot;2&quot;, 
&quot;個人／家族Asian&quot;, &quot;2&quot;, 
&quot;法人／単身Asian B Plan&quot;, &quot;3&quot;, 
&quot;法人／家族Asian B Plan&quot;, &quot;3&quot;, 
&quot;法人／無記名Asian Biz Trip Plan&quot;, &quot;4&quot;, 
&quot;1&quot;)</formula>
        <label>請求書印字位置コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportComm__c</fullName>
        <label>取込コメント</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportContractNo__c</fullName>
        <label>取込用契約No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InjuryCost__c</fullName>
        <label>傷害治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InjuryDeathCost__c</fullName>
        <label>傷害死亡・後遺障害</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InsuranceCancelContact__c</fullName>
        <label>保険解約連絡事項</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCancelDate__c</fullName>
        <label>保険解約日付（24時迄）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsuranceCostAge9__c</fullName>
        <label>（ベトナム）保険料年齢9</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満1歳～満18歳</fullName>
                </value>
                <value>
                    <fullName>満19歳～満30歳</fullName>
                </value>
                <value>
                    <fullName>満31歳～満40歳</fullName>
                </value>
                <value>
                    <fullName>満41歳～満50歳</fullName>
                </value>
                <value>
                    <fullName>満51歳～満60歳</fullName>
                </value>
                <value>
                    <fullName>満61歳～満65歳</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceCostAge__c</fullName>
        <formula>IF ( InsuranceShikiAge__c &lt;= 17, 
CASE (TEXT (InsuranceKind__c),&quot;Medi Life&quot;, &quot;2ヶ月～17歳&quot;,&quot;満0歳～満17歳&quot;), 
IF ( InsuranceShikiAge__c &lt;= 29, 
CASE (TEXT (InsuranceKind__c),&quot;Medi Life&quot;, &quot;満18歳～満39歳&quot;,&quot;満18歳～満29歳&quot;), 
IF ( InsuranceShikiAge__c &lt;= 39 , 
CASE (TEXT (InsuranceKind__c),&quot;Medi Life&quot;, &quot;満18歳～満39歳&quot;,&quot;満30歳～満39歳&quot;), 
IF ( InsuranceShikiAge__c &lt;= 49, 
&quot;満40歳～満49歳&quot;, 
IF ( InsuranceShikiAge__c &lt;= 59, 
&quot;満50歳～満59歳&quot;, 
IF ( InsuranceShikiAge__c &lt;= 64, 
&quot;満60歳～満64歳&quot;, 
IF ( InsuranceShikiAge__c &lt;= 69, 
CASE (TEXT (InsuranceKind__c),&quot;Medi Life&quot;,&quot;-&quot;,&quot;満65歳～満69歳&quot;), &quot;-&quot;) 

) ) ) ) ) )</formula>
        <label>（ベトナム）保険料年齢</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCurrency__c</fullName>
        <label>保険金額通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VND（単位：千VND）</fullName>
                </value>
                <value>
                    <fullName>IDR（単位：千IDR）</fullName>
                </value>
                <value>
                    <fullName>JPY（単位：千円）</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceKindRyaku__c</fullName>
        <formula>CASE( InsuranceKind__c , 
&quot;安心生活&quot;, &quot;安心&quot;, 
&quot;安心NHST&quot;, &quot;安N&quot;,
&quot;駐在中国&quot;, &quot;駐中&quot;,
&quot;チャイナボウル&quot;, &quot;CB&quot;,
&quot;優You&quot;, &quot;優Y&quot;, 
&quot;Medi-X&quot;, &quot;MX&quot;,
&quot;&quot;)</formula>
        <label>保険種類略称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceKind__c</fullName>
        <inlineHelpText>「安心生活」の場合は、「安心生活」を選択します。</inlineHelpText>
        <label>保険種類</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OtaName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>安心生活</fullName>
                </value>
                <value>
                    <fullName>Happy Life</fullName>
                </value>
                <value>
                    <fullName>安心NHST</fullName>
                </value>
                <value>
                    <fullName>駐在中国</fullName>
                </value>
                <value>
                    <fullName>Happy China</fullName>
                </value>
                <value>
                    <fullName>チャイナボウル</fullName>
                </value>
                <value>
                    <fullName>優You</fullName>
                </value>
                <value>
                    <fullName>新優You</fullName>
                </value>
                <value>
                    <fullName>Medi-X</fullName>
                </value>
                <value>
                    <fullName>ウェルライフ</fullName>
                </value>
                <value>
                    <fullName>OM-S</fullName>
                </value>
                <value>
                    <fullName>Medi Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsurancePlan__c</fullName>
        <label>保険プラン</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>InsuranceKind__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>SB</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>新A</fullName>
                </value>
                <value>
                    <fullName>新B</fullName>
                </value>
                <value>
                    <fullName>新C</fullName>
                </value>
                <value>
                    <fullName>新D</fullName>
                </value>
                <value>
                    <fullName>新E</fullName>
                </value>
                <value>
                    <fullName>新F</fullName>
                </value>
                <value>
                    <fullName>新G</fullName>
                </value>
                <value>
                    <fullName>新H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceShikiAge__c</fullName>
        <formula>IF(OR( MONTH( OtaInsuranceShiki__c ) &gt; MONTH( DateOfBirth__c ),AND(MONTH( OtaInsuranceShiki__c) - MONTH( DateOfBirth__c )=0, DAY( OtaInsuranceShiki__c) &gt;= DAY( DateOfBirth__c ))), 
YEAR(OtaInsuranceShiki__c) - YEAR( DateOfBirth__c ), 
YEAR(OtaInsuranceShiki__c) - YEAR( DateOfBirth__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保険始期時点年齢</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Card_ID__c</fullName>
        <label>被保険者証の記号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Card_Number__c</fullName>
        <label>被保険者証の番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issues_To_AC__c</fullName>
        <label>AC用伝達事項</label>
        <length>384</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>